--- a/src/page-2.html
+++ b/src/page-2.html
@@ -72,91 +72,174 @@
 
 <div class="funeral-services ">
 	<div class="container blue-grey darken-4">
-		<div class="row">
-			<div class="h1 col s12 white-text">Тарифы</div>
-			<div class="funeral-text col s12 f-str">
+			<div class="row">
+				<div class="h1 col s12 white-text">Тарифы</div>
+				<div class="funeral-text col s12 f-str">
 
-				<div class="col l3 s12 card_upd white">
-					<div class="pagetitle">
-						Бесплатные похороны
-					</div>
-					<div class="descriptions">
-						<a class="btn-floating btn-large waves-effect waves-light red lighten-1 link-up"><i class="material-icons">open_in_new</i></a>
-						<div class="text">
-							<div class="price_cell">0 <span>рублей</span></div>
-							<p>Минимальный пакет</p>
+					<div class="col l3 s12 card_upd white">
+						<div class="pagetitle">
+							Бесплатные похороны
 						</div>
-						<a href="#!" class="btn-float red lighten-1 down_click">Подробнее</a>
-					</div>
-				</div>
-				<div class="col l3 s12 card_upd white">
-					<div class="pagetitle">
-						Стандарт
-					</div>
-					<div class="descriptions">
-						<a class="btn-floating btn-large waves-effect waves-light red lighten-1 link-up"><i class="material-icons">open_in_new</i></a>
-						<div class="text">
-							<div class="price_cell">10 000 <span>рублей</span></div>
-							<p>Включает все необходимое</p>
+						<div class="descriptions">
+							<a class="btn-floating btn-large waves-effect waves-light red lighten-1 link-up"><i class="material-icons">open_in_new</i></a>
+							<div class="text">
+								<div class="price_cell">0 <span>рублей</span></div>
+								<p>Минимальный пакет</p>
+							</div>
+							<a href="#!" class="btn-float red lighten-1 down_click">Подробнее</a>
 						</div>
-						<a href="#!" class="btn-float red lighten-1 down_click">Подробнее</a>
 					</div>
-				</div>
-				<div class="col l3 s12 card_upd white">
-					<div class="pagetitle">
-						Премиум
-					</div>
-					<div class="descriptions">
-						<a class="btn-floating btn-large waves-effect waves-light red lighten-1 link-up"><i class="material-icons">open_in_new</i></a>
-						<div class="text">
-							<div class="price_cell">30 000 <span>рублей</span></div>
-							<p>VIP похороны</p>
+					<div class="col l3 s12 card_upd white">
+						<div class="pagetitle">
+							Стандарт
 						</div>
-						<a href="#!" class="btn-float red lighten-1 down_click">Подробнее</a>
+						<div class="descriptions">
+							<a class="btn-floating btn-large waves-effect waves-light red lighten-1 link-up"><i class="material-icons">open_in_new</i></a>
+							<div class="text">
+								<div class="price_cell">10 000 <span>рублей</span></div>
+								<p>Включает все необходимое</p>
+							</div>
+							<a href="#!" class="btn-float red lighten-1 down_click">Подробнее</a>
+						</div>
 					</div>
-				</div>
+					<div class="col l3 s12 card_upd white">
+						<div class="pagetitle">
+							Премиум
+						</div>
+						<div class="descriptions">
+							<a class="btn-floating btn-large waves-effect waves-light red lighten-1 link-up"><i class="material-icons">open_in_new</i></a>
+							<div class="text">
+								<div class="price_cell">30 000 <span>рублей</span></div>
+								<p>VIP похороны</p>
+							</div>
+							<a href="#!" class="btn-float red lighten-1 down_click">Подробнее</a>
+						</div>
+					</div>
 
+				</div>
 			</div>
-		</div>
+	</div>
 </div>
 
 <div class="funeral-services pictures_block ">
+
 	<div class="container white black-text z-depth-3">
 		<div class="row no-margin">
 			<img src="img/org_posh.jpg" alt="" class="col s12">
+		</div>
+		<div class="link_buton-anima">
+			<a href="#!" class="btn fix-lable">Подробнее</a>
 		</div>
 			<div class="row blue-grey-text text-darken-4">
 				<div class="h1 col s12 ">Организация похорон</div>
 				<div class="funeral-text col s12">
 					Рутаульная служба Ангел предлагает полный комплекс ритуальных услуг по организации похорон. Специалисты предприятия берут на себя решение всех задач, связанных с погребением. Квалифицированная организация похорон дает возможность близким спокойно проститься с умершим.
 					<ul class="collection">
-						<li class="collection-item">Оформление документов</li>
-						<li class="collection-item">Выбор места для погребения и способа захоронения</li>
-						<li class="collection-item">Покупка ритуальных принадлежностей на похороны</li>
-						<li class="collection-item">Выбор похоронного транспорта</li>
+						<li class="collection-item">Оформление документов <a href="#!" class="btn right">Подробнее</a></li>
+						<li class="collection-item">Выбор места для погребения и способа захоронения <a href="#!" class="btn right">Подробнее</a></li>
+						<li class="collection-item">Покупка ритуальных принадлежностей на похороны <a href="#!" class="btn right">Подробнее</a></li>
+						<li class="collection-item">Выбор похоронного транспорта <a href="#!" class="btn right">Подробнее</a></li>
 					</ul>
 				</div>
-		</div>
+			</div>
+	</div>
 </div>
+
+
 
 <div class="funeral-services pictures_block ">
 	<div class="container white black-text z-depth-3">
 		<div class="row no-margin">
-			<img src="img/org_posh.jpg" alt="" class="col s12">
+			<img src="img/org_cremacia.jpg" alt="" class="col s12">
+		</div>
+		<div class="link_buton-anima">
+			<a href="#!" class="btn fix-lable">Подробнее</a>
 		</div>
 			<div class="row blue-grey-text text-darken-4">
-				<div class="h1 col s12 ">Организация похорон</div>
+				<div class="h1 col s12 ">Кремация</div>
 				<div class="funeral-text col s12">
-					Рутаульная служба Ангел предлагает полный комплекс ритуальных услуг по организации похорон. Специалисты предприятия берут на себя решение всех задач, связанных с погребением. Квалифицированная организация похорон дает возможность близким спокойно проститься с умершим.
-					<ul class="collection">
-						<li class="collection-item">Оформление документов</li>
-						<li class="collection-item">Выбор места для погребения и способа захоронения</li>
-						<li class="collection-item">Покупка ритуальных принадлежностей на похороны</li>
-						<li class="collection-item">Выбор похоронного транспорта</li>
-					</ul>
+					<p>Кремация, как способ захоронения, берет истоки из глубин веков. Такой тип похорон особенно актуален в мегаполисах с высокой плотностью населения. За счет кремации сокращается площадь кладбищ, уменьшается бюджет похорон, но при этом остается возможность проводить покойного в последний путь с соблюдением всех традиций.</p>
+
 				</div>
-		</div>
+			</div>
+	</div>
 </div>
+
+<div class="funeral-services pictures_block ">
+
+	<div class="container white black-text z-depth-3">
+		<div class="row no-margin">
+			<img src="img/org_agentjpg.jpg" alt="" class="col s12">
+		</div>
+		<div class="link_buton-anima">
+			<a href="#!" class="btn fix-lable">Подробнее</a>
+		</div>
+			<div class="row blue-grey-text text-darken-4">
+				<div class="h1 col s12 ">Ритуальный агент</div>
+				<div class="funeral-text col s12">
+					<p>
+						Наша компания, предоставляющая ритуальные услуги,
+						располагает такими сотрудниками. Организовывает похоронный агент
+						ритуальные услуги на том уровне, на котором его могут попросить
+						родственники. Если надо уложиться в определённый бюджет,
+						то ритуальный агент поможет оптимизировать расходы и заказать
+						ту или иную услугу.
+					</p>
+				</div>
+			</div>
+	</div>
+</div>
+
+<div class="funeral-services pictures_block ">
+
+	<div class="container white black-text z-depth-3">
+		<div class="row no-margin">
+			<img src="img/org_mesto.jpg" alt="" class="col s12">
+		</div>
+		<div class="link_buton-anima">
+			<a href="#!" class="btn fix-lable">Подробнее</a>
+		</div>
+			<div class="row blue-grey-text text-darken-4">
+				<div class="h1 col s12 ">Место на кладбище</div>
+				<div class="funeral-text col s12">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Totam perspiciatis hic a dignissimos, maxime corporis
+						laborum sed deleniti enim, explicabo ratione molestias sunt,
+						nobis dolorem nemo tenetur, adipisci dicta? Asperiores perspiciatis
+						porro eius autem ad nihil officia nam! Sunt, asperiores? Quasi dolor
+						animi ab alias, adipisci ad odio tempora commodi.
+					</p>
+				</div>
+			</div>
+	</div>
+</div>
+
+<div class="funeral-services pictures_block ">
+
+	<div class="container white black-text z-depth-3">
+		<div class="row no-margin">
+			<img src="img/org_auto.jpg" alt="" class="col s12">
+		</div>
+		<div class="link_buton-anima">
+			<a href="#!" class="btn fix-lable">Подробнее</a>
+		</div>
+			<div class="row blue-grey-text text-darken-4">
+				<div class="h1 col s12 ">Транспорт</div>
+				<div class="funeral-text col s12">
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Totam perspiciatis hic a dignissimos, maxime corporis
+						laborum sed deleniti enim, explicabo ratione molestias sunt,
+						nobis dolorem nemo tenetur, adipisci dicta? Asperiores perspiciatis
+						porro eius autem ad nihil officia nam! Sunt, asperiores? Quasi dolor
+						animi ab alias, adipisci ad odio tempora commodi.
+					</p>
+				</div>
+			</div>
+	</div>
+</div>
+
 </main>
 <footer class="page-footer blue-grey darken-3">
           <div class="footer-copyright">
